2006-04-04  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-exec.c: (gnome_prepend_terminal_to_vector):
	Fix compiler warnings from previous patch.
	* libgnome/gnome-program.c: (gnome_program_locate_file): Remove
	unused variable.

2006-04-04  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add --enable-esd switch. Patch from
	Leonardo Boshell. Closes bug #310972.

2006-04-04  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-exec.c: (gnome_prepend_terminal_to_vector):
	Fix for 'run in terminal' launchers with gnome-terminal as
	the preferred terminal. Patch from Vincent Vuntz. Closes
	bug #336542.

2006-04-04  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-init.c: (libgnome_option_cb): Fix
	--espeaker option. Closes bug #333932. Patch from 
	Michael H. Schimek.

2006-04-04  Kjartan Maraas <kmaraas@gnome.org>

	* libgnome/gnome-help.c: (gnome_help_display_with_doc_id_and_env):
	* libgnome/gnome-program.c: (gnome_program_locate_file):
	Fix gnome_help_display_with_doc_id() to behave as documented.
	Patch from Christian Persch. Closes bug #333943.

2006-04-01  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: (global_program_unref),
	(add_to_module_list), (gnome_program_class_init),
	(gnome_program_instance_init), (gnome_program_finalize),
	(gnome_program_locate_file), (gnome_program_parse_args),
	(gnome_program_init_common): Fix leaks. (Christian Persch)
	Closes bug #335741.

======================== 2.14.0 =============================

2006-03-13  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Release 2.14.0.

2006-03-09  Subhransu Behera <sbehera@redhat.com>

	* configure.in: "or" is added to ALL_LINGUS

2006-02-15  Christian Persch  <chpe@cvs.gnome.org>

        * libgnome/gnome-program.c: (gnome_program_preinit): revert to only
	using GOption if explicitly requested, since otherwise the popt
	context isn't created, which breaks ABI in case anyone tries to use
	it.
		